feat: restore leadership page
